Alter an early return that was preventing HTMLCanvasElement::didDraw notifications from being triggered when accelerated compositing was enabled. The notification is necessary to make sure that any cached state is cleared in the HTMLCanvasElement object. To prevent performance regressions, the cached state is explicitly cleared, as the didDraw machinery is not necessary for accelerated canvases. https://bugs.webkit.org/show_bug.cgi?id=73257

Patch by Jeff Timanus <twiz@chromium.org> on 2011-11-30
Reviewed by Stephen White.

Source/WebCore:

Test: fast/canvas/webgl/canvas-2d-webgl-texture.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::didDraw):
(WebCore::HTMLCanvasElement::setSurfaceSize):
* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::didDraw):

LayoutTests:

* fast/canvas/webgl/canvas-2d-webgl-texture-expected.txt: Added.
* fast/canvas/webgl/canvas-2d-webgl-texture.html: Added.

Canonical link: https://commits.webkit.org/90064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101592 268f45cc-cd09-0410-ab3c-d52691b4dbfc